plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.example.nctai_trading"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"
        multiDexEnabled true

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }


    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true

            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

repositories {
    google()
    jcenter()
    maven { url "https://oss.jfrog.org/libs-snapshot" }
}

dependencies {


    configurations {
        all*.exclude group: 'org.glassfish.hk2.external', module:'javax.inject'
    }

    // rxandroid-java

    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'

    // particle

    implementation 'io.particle:cloudsdk:1.0.1'
    implementation 'io.particle:devicesetup:0.7.3'

    //retrofit

    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
    implementation 'com.squareup.okhttp3:okhttp:4.5.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'

    // gson

    implementation 'com.google.code.gson:gson:2.8.6'

    // org.apache

    implementation 'commons-codec:commons-codec:20041127.091804'
    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'commons-validator:commons-validator:1.7'

    // mailgun

    implementation 'net.sargue:mailgun:1.9.2'

    // square point-of-sale

    implementation 'com.squareup:square:8.1.0.20210121'

    // android layout

    implementation 'androidx.navigation:navigation-ui:2.3.3'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.appcompat:appcompat:1.2.0'

    // com.google

    implementation 'com.google.android.material:material:1.2.1'

    // mongoDB

    implementation files('libs/mongo-java-driver-3.4.0-SNAPSHOT.jar')

}